# optCtrl

./: CMakeLists.txt
cmake/: FindAlglib.cmake  FindArmadillo.cmake  FindEigen3.cmake  FindGSL.cmake  FindLWPR.cmake  FindSFML.cmake  OPTCTRLConfig.cmake.in  OPTCTRLConfigVersion.cmake.in  Packaging.cmake  Testing.cmake
examples/: CMakeLists.txt
examples/Armar6LoadReduce/: CMakeLists.txt  main.cpp
examples/DoublePendulum/: CMakeLists.txt  main.cpp
examples/InvertPendulum/: CMakeLists.txt  main.cpp
src/methods/: ilqr.cpp  ilqr.h
